[gd_scene load_steps=3 format=3 uid="uid://c2vqv2bdulve5"]

[ext_resource type="Script" uid="uid://dvlheglkq2tb2" path="res://scripts/UI_Scripts/options/game_options.gd" id="1_km2xm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7e6vm"]
bg_color = Color(0.894922, 0.894922, 0.894922, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 3

[node name="Game Options" type="VBoxContainer"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -110.5
offset_right = 122.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_km2xm")

[node name="General" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "General
"

[node name="Controls" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Controls
"

[node name="Return" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Return
"

[node name="Options Button" type="Button" parent="."]
visible = false
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/hover = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7e6vm")
theme_override_styles/normal = SubResource("StyleBoxFlat_7e6vm")
text = "Options
"

[connection signal="pressed" from="General" to="." method="_on_main_options_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
